fixed off centered username issue

--- a/python/templates/styles/styles.css
+++ b/python/templates/styles/styles.css
@@ -20,6 +20,8 @@ background: #91a4ad;
  #userCircle{
   width: 40px;
   height: 40px;
+  margin: 0 auto;
+  display: block;
 }
 
 #userWrapper{
